Made adjustments to the UI of Home and Forecast page, moved all the react queries to a single file

--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "MemphisRiver";
+  src: url(assets/fonts/MemphisRiver.ttf) format("truetype");
+}
+
 .App {
   text-align: center;
 }
@@ -5,6 +10,11 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.app_header {
+  font-family: "MemphisRiver", sans-serif;
+  font-size: 6em;
 }
 
 @media (prefers-reduced-motion: no-preference) {
